--- a/Planets.csproj
+++ b/Planets.csproj
@@ -57,4 +57,13 @@
 	  <Folder Include="Resources\Fonts\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Views\PlanetsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\StartPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
